--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,23 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+ul {
+  list-style: none;
+  padding-inline-start: 0px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: space-between;
+}
+
+.gallery-item:not(:last-child) {
+  margin-right: 15px;
+}
+.gallery-img {
+  display: block;
+  max-width: 100%;
+  height: 300px;
+}
+
